<resources>
    <string name="app_name">MDb App</string>

    <string name="fragment_home_title">Home</string>
    <string name="fragment_search_title">Search</string>
    <string name="fragment_favorites_title">Favorites</string>
    <string name="fragment_popular_movies_title">Popular</string>
    <string name="fragment_top_rated_movies_title">Top Rated</string>
    <string name="fragment_upcoming_movies_title">Upcoming</string>

    <string name="featured_movie_image_content_description">Featured movie backdrop image</string>

    <string name="menu_item_home_title">@string/fragment_home_title</string>
    <string name="menu_item_search_title">@string/fragment_search_title</string>
    <string name="menu_item_favorites_title">@string/fragment_favorites_title</string>

    <string name="search_movies_hint">Search movies</string>
    <string name="search_icon_content_description">search icon</string>
    <string name="search_clear_content_description">search clear</string>
</resources>
