<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.ranhaveshush.mdb.viewmodel.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.SearchFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_searchBar"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView_searchIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/search_icon_content_description"
                android:paddingStart="@dimen/padding_medium"
                android:paddingEnd="@dimen/padding_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_search_white_24dp" />

            <EditText
                android:id="@+id/editText_searchQuery"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/search_movies_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="@dimen/padding_small"
                android:text="@={viewmodel.query}"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView_searchClear"
                app:layout_constraintStart_toEndOf="@id/imageView_searchIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_searchClear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/search_clear_content_description"
                android:onClick='@{() -> viewmodel.clearQuery()}'
                android:paddingStart="@dimen/padding_medium"
                android:paddingEnd="@dimen/padding_medium"
                android:visibility="@{viewmodel.query.empty ? View.INVISIBLE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close_white_24dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_movies"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:items="@{viewmodel.movies}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout_searchBar"
            tools:listitem="@layout/item_movie" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
